--- a/client/src/app/home/home.page.html
+++ b/client/src/app/home/home.page.html
@@ -9,6 +9,15 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <button ion-button full icon-left (click)="startTracking()" *ngIf="!locationWatchStarted">
+    <ion-icon name="locate"></ion-icon>
+    Start Tracking
+  </button>
+<button ion-button full color="danger" icon-left (click)="stopTracking()" *ngIf="locationWatchStarted">
+    <ion-icon name="hand"></ion-icon>
+    Stop Tracking
+</button>
+
   <div class="map-wrapper">
     <div id="map_center">
       <img src="assets/icon/location-marker.png" />
@@ -42,4 +51,12 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+
+  <ion-list>
+    <ion-list-header>Previous Tracks</ion-list-header>
+    <ion-item *ngFor="let route of previousTracks">
+      {{ route.finished | date }}, {{ route.path.length }} Waypoints
+      <button ion-button clear item-end (click)="showHistoryRoute(route.path)">View Route</button>
+    </ion-item>
+  </ion-list>
 </ion-content>
