--- a/client/src/app/pages/maps/maps.page.html
+++ b/client/src/app/pages/maps/maps.page.html
@@ -1,9 +1,54 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Maps</ion-title>
+<ion-header [translucent]="true">
+  <ion-toolbar color="warning">
+    <ion-button (click)="loadMap()" shape="round" color="dark">
+      <ion-icon slot="start" name="locate"></ion-icon>
+      Where I Am
+    </ion-button>
+    <ion-title slot="end">Google Map</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="true">
+  <button ion-button full icon-left (click)="startTracking()" *ngIf="!locationWatchStarted">
+    <ion-icon name="locate"></ion-icon>
+    Start Tracking
+  </button>
+<button ion-button full color="danger" icon-left (click)="stopTracking()" *ngIf="locationWatchStarted">
+    <ion-icon name="hand"></ion-icon>
+    Stop Tracking
+</button>
 
+  <div class="map-wrapper">
+    <div id="map_center">
+      <img src="assets/icon/location-marker.png" />
+    </div>
+    <div #map id="map"></div>
+  </div>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col size="3">
+        <b>Distance</b>
+      </ion-col>
+      <ion-col>
+        {{distance}}
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="3">
+        <b>Address</b>
+      </ion-col>
+      <ion-col>
+        {{address}}
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <ion-list>
+    <ion-list-header>Previous Tracks</ion-list-header>
+    <ion-item *ngFor="let route of previousTracks">
+      {{ route.finished | date }}, {{ route.path.length }} Waypoints
+      <button ion-button clear item-end (click)="showHistoryRoute(route.path)">View Route</button>
+    </ion-item>
+  </ion-list>
 </ion-content>
