--- a/client/src/app/pages/profile-edit/profile-edit.page.html
+++ b/client/src/app/pages/profile-edit/profile-edit.page.html
@@ -1,10 +1,10 @@
 <ion-header>
   <ion-toolbar color="tertiary">
-    <ion-title>Profile</ion-title>
+    <ion-title>Edit Profile</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding" *ngIf="filtersLoaded | async">
+<ion-content class="ion-padding">
 
   <ion-item>
     <ion-label>First Name</ion-label>
@@ -18,15 +18,10 @@
     <ion-label>Description</ion-label>
     <ion-input [(ngModel)]="data.description" placeholder="Enter Description"></ion-input>
   </ion-item>
-  <ion-button (click)="update()" color="success" size="small">
+  <ion-button (click)="test12()" color="success" size="small">
     Update
   </ion-button>
   <ion-button [routerLink]="[ '/profile']" color="danger" size="small">
     Cancel
   </ion-button>
 </ion-content>
-
-
-<ng-template #loggedOut>
-  Please login.
-</ng-template>
