--- a/client/src/app/pages/tab-bar/tab-bar.page.html
+++ b/client/src/app/pages/tab-bar/tab-bar.page.html
@@ -24,7 +24,7 @@
 
     <ion-tab-button tab="profile">
       <ion-icon name="person"></ion-icon>
-      <ion-label>{{ content }}</ion-label>
+      <ion-label>Profile</ion-label>
     </ion-tab-button>
 
   </ion-tab-bar>
