--- a/client/src/app/pages/maps/maps.page.scss
+++ b/client/src/app/pages/maps/maps.page.scss
@@ -13,12 +13,11 @@
 
 #map {
   width: 100%;
-  height: 70vh;
+  height: 50vh;
 }
 
 .map-wrapper {
   position: relative;
-
   #map_center {
     position: absolute;
     z-index: 99;
@@ -29,4 +28,15 @@
     margin-left: -21px;
     margin-top: -41px;
   }
+}
+
+
+ion-card {
+  max-height: 30vh;
+  display: flex;
+  flex-direction: column;
+}
+
+ion-card-content{
+  overflow: scroll;;
 }
