--- a/client/src/app/pages/tab-bar/tab-bar.page.html
+++ b/client/src/app/pages/tab-bar/tab-bar.page.html
@@ -13,7 +13,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="record">
-      <ion-icon name="start"></ion-icon>
+      <ion-icon name="play"></ion-icon>
       <ion-label>Start</ion-label>
     </ion-tab-button>
 
