--- a/client/src/app/pages/tab-bar/tab-bar.page.html
+++ b/client/src/app/pages/tab-bar/tab-bar.page.html
@@ -2,14 +2,10 @@
 
   <ion-tab-bar slot="bottom">
 
-    <ion-tab-button tab="home">
-      <ion-icon name="analytics"></ion-icon>
-      <ion-label>Home</ion-label>
-    </ion-tab-button>
 
     <ion-tab-button tab="maps">
       <ion-icon name="map"></ion-icon>
-      <ion-label>Maps</ion-label>
+      <ion-label>Rute</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="record">
@@ -19,12 +15,12 @@
 
     <ion-tab-button tab="friends">
       <ion-icon name="people"></ion-icon>
-      <ion-label>Friends</ion-label>
+      <ion-label>Priteni</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="profile">
       <ion-icon name="person"></ion-icon>
-      <ion-label>Profile</ion-label>
+      <ion-label>Profil</ion-label>
     </ion-tab-button>
 
   </ion-tab-bar>
